testing/Travis/testcases/prototype/shouldSucceed/fatal313bug.adl
CONTEXT Bug IN ENGLISH

RELATION r1[A*B]
RELATION r2[A*B]
RELATION s[A*C]

INTERFACE Piet : I[B]
BOX[ "label" : (r1 \/ r2)~;s
   BOX[ "label2" : I
   ]  ]

ENDCONTEXT